2002-04-01  Darke <darkepaw@users.sourceforge.net>
	* conf/Configuration.h: Removed memory leak.
	* usecode/ucxt/*: Removed memory leak, cleaned code.

2002-03-31  Darke <darkepaw@users.sourceforge.net>
	* palette.cc, mapedit/objbrowse.cc, mapedit/studio.cc: namespace fixes
	* usecode/ucxt/*: Added ext32 header support.

2002-03-29  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* usecode/useval.*: fixed stupid output bug
	* usecode/useval.*: serialize arrays & pointers
	* server/objserial.*: move Serial_in, Serial_out class to header
	* server/server.*: Server_delay() now accepts a custom
	message handling function. (default is still Handle_client_message)
	* server/servemsg.*: added usecode_debugging message type

2002-03-28  Jeff Freedman  <jeff@amy.nerble.net>

	* shapes/vgafile.{cc,h}:  Vga_file class can now read single-shape
	files (i.e., 'pointers.shp').
	* palette.cc (Palette): Check patch dir. before static.

2002-03-24  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* gamewin.cc: also display name when showing NPC numbers
	* gamedat.cc: delete newgame.ver, exult.ver when loading zipped saves

2002-03-23  Jeff Freedman  <jeff@amy.nerble.net>

	* exult.cc: 'Paint' mode implemented.  Tile grid is shown on
	ground when in this mode.

2002-03-23  Willem Jan Palenstijn  <wjpalenstijn@users.sourceforge.net>
	* Makefile.be, be_midi.cc, xmidi.cc: merged BeOS patch by Jack Burton

2002-03-23  Willem Jan Palenstijn  <wjpalenstijn@users.sourceforge.net>
	* usecode/conversation.cc: removed some debugging output
	* audio/Audio.cc, files/Flex.cc: added newline at end of file

2002-03-23  Jeff Freedman  <jeff@amy.nerble.net>

	* cheat.h,server.h,mouse.cc,objserial.cc:  Edit mode set from
	ExultStudio, with mouse changed depending on mode (which doesn't
	do anything yet).
	* exult_studio.glade:  'Mode' menu added (but modes not
	implemented yet.)

2002-03-22  Ryan Nunn  <triforce@merlin.net.au>