@@ -136,6 +136,7 @@ public:
 	Object_browser  *create_browser(const char *fname);
 	Object_browser  *create_palette_browser(const char *fname);
 	void set_game_path(const char *path);
+	void setup_file_list();
 	void save_all();		// Write out everything.
 	bool need_to_save();		// Anything modified?
 	void write_map();
